parsers/tree-sitter-xcsp3/corpus/expressions.txt
========
Literals
========

<instance>
  <variables>
    <var> true </var>
    <var> 2 </var>
    <var> 0.5 </var>
    <var> 1/2 </var>
    <var> infinity </var>
  </variables>
</instance>

---

(source_file
  item: (element
    name: (identifier)
    children: (element
      name: (identifier)
      definition: (boolean_literal)
      (identifier))
    children: (element
      name: (identifier)
      definition: (integer_literal)
      (identifier))
    children: (element
      name: (identifier)
      definition: (decimal_literal)
      (identifier))
    children: (element
      name: (identifier)
      definition: (rational_literal)
      (identifier))
    children: (element
      name: (identifier)
      definition: (infinity)
      (identifier))
    (identifier)))

=====
Calls
=====

<instance>
  <variables>
    <var> eq(false, true) </var>
    <var> add(1, 2, 3) </var>
  </variables>
</instance>

---

(source_file
  item: (element
    name: (identifier)
    children: (element
      name: (identifier)
      definition: (call
        name: (identifier)
        argument: (boolean_literal)
        argument: (boolean_literal))
      (identifier))
    children: (element
      name: (identifier)
      definition: (call
        name: (identifier)
        argument: (integer_literal)
        argument: (integer_literal)
        argument: (integer_literal))
      (identifier))
    (identifier)))

========
Negative 
========

<instance>
  <variables>
    <var> +1 </var>
    <var> -1 </var>
  </variables>
</instance>

---

(source_file
  (element
    (identifier)
    (element
      (identifier)
      (integer_literal)
      (identifier))
    (element
      (identifier)
      (call
        (integer_literal))
      (identifier))
    (identifier)))

================
Set Constructors
================

<instance>
  <variables>
    <var> 1..5 </var>
  </variables>
</instance>

---

(source_file
  (element
    (identifier)
    (element
      (identifier)
      (set_constructor
        (integer_literal)
        (integer_literal))
      (identifier))
    (identifier)))

==============
Indexed Access
==============

<instance>
  <variables>
    <var> x[0] </var>
    <var> x[] </var>
    <var> x[0][1] </var>
  </variables>
</instance>

---

(source_file
  item: (element
    name: (identifier)
    children: (element
      name: (identifier)
      definition: (indexed_access
        collection: (identifier)
        index: (integer_literal))
      (identifier))
    children: (element
      name: (identifier)
      definition: (indexed_access
        collection: (identifier))
      (identifier))
    children: (element
      name: (identifier)
      definition: (indexed_access
        collection: (identifier)
        index: (integer_literal)
        index: (integer_literal))
      (identifier))
    (identifier)))

====
Sets
====

<instance>
  <variables>
    <var id="s" type ="set">
      <required > 1 5 </ required >
      <possible > 3 6 </ possible >
    </var >
  </variables>
</instance>

---

(source_file
  (element
    (identifier)
    (element
      (identifier)
      (attribute
        (identifier)
        (identifier))
      (attribute
        (identifier)
        (identifier))
      (element
        (identifier)
        (integer_literal)
        (integer_literal)
        (identifier))
      (element
        (identifier)
        (integer_literal)
        (integer_literal)
        (identifier))
      (identifier))
    (identifier)))

=====
Tuple
=====

<instance>
  <variables>
    <var> (1, 2, 3) </var>
  </variables>
</instance>

---

(source_file
  item: (element
    name: (identifier)
    children: (element
      name: (identifier)
      definition: (tuple
        member: (integer_literal)
        member: (integer_literal)
        member: (integer_literal))
      (identifier))
    (identifier)))

========
Interval
========

<instance>
  <variables>
    <var id="w" type =" real "> [0 ,+ infinity [ </var >
    <var id="x" type =" real "> [ -4 ,4] </var >
    <var id="y" type =" real "> [2/3 ,8.355] </var >
  </variables>
</instance>
---

(source_file
  item: (element
    name: (identifier)
    children: (element
      name: (identifier)
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      definition: (interval
        left: (integer_literal)
        right: (infinity))
      (identifier))
    children: (element
      name: (identifier)
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      definition: (interval
        left: (call
          argument: (integer_literal))
        right: (integer_literal))
      (identifier))
    children: (element
      name: (identifier)
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      attribute: (attribute
        name: (identifier)
        value: (identifier))
      definition: (interval
        left: (rational_literal)
        right: (decimal_literal))
      (identifier))
    (identifier)))
