parsers/tree-sitter-xcsp3/corpus/source_file.txt
==========
Empty File
==========


---

(source_file)

==============
Block Comments
==============

<!-- Single Line-->

<!--
MultiLine
-->

---

(source_file
  (block_comment)
  (block_comment))


========
Elements
========

<instance>
  <variables>
  </variables>
</instance>

---

(source_file
  item: (element
    name: (identifier)
    (identifier)))

==========
Attributes
==========

<instance format="XCSP3" type = 'COP'>

</instance>

---

(source_file
  attribute: (attribute
    name: (identifier)
    value: (identifier))
  attribute: (attribute
    name: (identifier)
    value: (identifier)))

=============
Instantiation
=============

< instantiation type =" solution ">
  <list > x [0] x [1] x [2] </list >
  <values > 1 1 2 </ values >
</ instantiation >

---

(source_file
  (attribute
    (identifier)
    (identifier))
  (element
    (identifier)
    (indexed_access
      (identifier)
      (integer_literal))
    (indexed_access
      (identifier)
      (integer_literal))
    (indexed_access
      (identifier)
      (integer_literal))
    (identifier))
  (element
    (identifier)
    (integer_literal)
    (integer_literal)
    (integer_literal)
    (identifier)))